# turbin3_Q4_CAPSTONE_JHONATAN_2024

./: README.md
anchor/: Anchor.toml
anchor/programs/minesweeper/: Cargo.toml
anchor/programs/minesweeper/src/: lib.rs
anchor/src/: counter-exports.ts
anchor/tests/: counter.spec.ts
src/: index.css
src/app/: app-routes.tsx  app.tsx
src/components/GameBoard/: grid.tsx  tile.tsx  useGameSession.ts  useTile.ts
src/components/GameDifficulty/: select-difficulty.tsx  useGameDifficulty.ts
src/components/counter/: counter-data-access.tsx  counter-feature.tsx  counter-ui.tsx
src/components/dashboard/: dashboard-feature.tsx  new_game_form.tsx  useGameProgram.ts
src/components/solana/: cluster-selec.tsx  explorer-link.tsx  solana-provider.tsx
src/components/ui/: ui-layout.tsx
