[package]
name = "minesweeper"
version = "0.1.0"
description = "Solana Minesweeper created as a Capstone project during turbin3 Q4 2024"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "minesweeper"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
